# kjtcom

./: .CLAUDE.md.kate-swp  .gitignore  .iao.json  CLAUDE.md  EVENING_DEPLOY_REQUIRED.md  GEMINI.md  README.md  agent_scores.json  audios.txt  firebase.json  firestore.indexes.json  firestore.rules  iao-p3-bootstrap.md  iteration_registry.json  kjtcom-status-report-2026-04-01.md  kjtcom-telegram-bot.service  transcripts.txt  update_readme.py
.gemini/: settings.json
.playwright-mcp/: page-2026-03-31T13-41-34-891Z.yml  page-2026-03-31T13-41-49-336Z.yml  page-2026-03-31T13-42-06-220Z.yml  page-2026-03-31T13-42-18-350Z.yml  page-2026-03-31T13-42-27-271Z.yml
app/: .firebaserc  README.md  firebase.json  pubspec.yaml
data/: delta-v10.66.md  (+8 more)
iao-middleware/: .gitignore  CHANGELOG.md  COMPATIBILITY.md  MANIFEST.json  README.md  install.fish  pyproject.toml
iao-middleware/docs/adrs/: 0001-phase-a-externalization.md
iao-middleware/iao_middleware/: __init__.py  cli.py  context_bundle.py  doctor.py  logger.py  paths.py  registry.py
iao-middleware/iao_middleware/postflight/: __init__.py  artifacts_present.py  build_gatekeeper.py  claw3d_version_matches.py  deployed_claw3d_matches.py  deployed_flutter_matches.py  firestore_baseline.py  map_tab_renders.py
iao-middleware/lib/: build_context_bundle.py  check_compatibility.py  iao_main.py  query_registry.py  test_iao_paths.py
iao-middleware/lib/postflight_checks/: claw3d_label_legibility.py  deployed_iteration_matches.py  firebase_oauth_probe.py  visual_baseline_diff.py
iao-middleware/tests/: test_doctor.py  test_paths.py
(+541 files in other folders)
