[project]
name = "iao-middleware"
version = "0.1.0"
description = "Iterative Agentic Orchestration middleware"
requires-python = ">=3.11"
dependencies = [
    "litellm",
    "jsonschema",
]

[project.scripts]
iao = "iao_middleware.cli:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["iao_middleware*"]
